@@ -1,4 +1,7 @@
 ## run
 
 - add `token.properties` into root dir
-- run `mvn clean compile exec:java`
+- run `mvn clean compile`
+
+- run `export MAVEN_OPTS="-Xms1G -Xmx1G -XX:MaxPermSize=256M"`
+- run `mvn exec:java`
